src/main/java/com/example/s3image/error/ErrorResponse.java
package com.example.s3image.error;

import lombok.Builder;
import org.springframework.http.HttpStatus;

@Builder
public record ErrorResponse(HttpStatus status, String message) {
}